Correction alignement

--- a/frontend/src/components/LaboratoryAgreement/LaboratoryAgreementButton/LaboratoryAgreementButton.scss
+++ b/frontend/src/components/LaboratoryAgreement/LaboratoryAgreementButton/LaboratoryAgreementButton.scss
@@ -9,6 +9,7 @@
   min-width: 30px;
   padding: 0;
   display: flex;
+  align-items: center;
   justify-content: center;
 
   &--sm {
